infra/docker-registry/docker-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: LoadBalancer
  selector:
    app: registry
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
