infra/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  type: LoadBalancer
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
